minor fixing on datepicker overflow

--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,11 @@
 }
 .modal-body-overflow{
     max-height: calc(100vh - 235px);
-    overflow-y: auto;
+    /*overflow-y: auto;*/
 }
 .modal-body-fade{
     max-height: calc(100vh - 120px) !important;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
 }
 .cascading-admin-card {
     margin-top: 1.25rem; }
